Gaurav-AWS-Playlist-with-Terraform/auto-scaling-group/security_group.tf
# Allow 80 from CLB + 22 for SSH (for stress demo)
resource "aws_security_group" "web" {
  name        = "asg-web-sg"
  description = "Allow 80 from CLB, 22 for SSH"
  vpc_id      = data.aws_vpc.default.id

  ingress {
    from_port       = 80
    to_port         = 80
    protocol        = "tcp"
    security_groups = [var.clb_security_group_id]
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = { Name = "asg-web-sg" }
}
